# fifo_gains

./: .env  Cargo.toml
migrations/: 20250910042534_create_fifo_table.sql
src/: db.rs  fifo.rs  main.rs  models.rs
